scripts/nullness/annotator/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8.txt
../annotator/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/presentation/StaffMenu.java:7: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/presentation/StaffMenu.java:19: error: cannot find symbol
	@Initializer public void show() {
	 ^
  symbol:   class Initializer
  location: class StaffMenu
Note: ../annotator/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/businesslogic/TicketPriceBL.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../annotator/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/dataaccess/SerializeDB.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
